<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_gauge"
        android:title="@string/tab_dashboard" />
    <item
        android:id="@+id/nav_boost"
        android:icon="@drawable/ic_bolt"
        android:title="@string/tab_boost" />
    <item
        android:id="@+id/nav_profiles"
        android:icon="@drawable/ic_gamepad"
        android:title="@string/tab_profiles" />
    <item
        android:id="@+id/nav_system"
        android:icon="@drawable/ic_monitor"
        android:title="@string/tab_system" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_gear"
        android:title="@string/tab_settings" />
</menu>
